# MultiplicativePersistence

./: .gitignore  CMakeLists.txt  ConsoleOutput.cpp  ConsoleOutput.h  MultiplicativePersistence.cpp  MultiplicativePersistence.h  README.md  reademe.md
Data/: data.json
src/: ConsoleOutput.cpp  ConsoleOutput.h  DataManagement.cpp  DataManagement.h  FileManagement.cpp  FileManagement.h  MultiplicativePersistence.cpp  MultiplicativePersistence.h  cmdMain.cpp  main.cpp
src/Data/: DataManagement.cpp  DataManagement.h
src/Libs/json/: json.hpp  json_util.h
src/MP/: MPType.h  MultiplicativePersistence.cpp  MultiplicativePersistence.h
src/UI/: ConsoleOutput.cpp  ConsoleOutput.h  MP_UI.cpp  MP_UI.h  UI.cpp  UI.h
src/UI/ConsoleOuput/: ConsoleOutput.cpp  ConsoleOutput.h
src/UI/Windows/: ImguiWindow.h  MP_Window.cpp  MP_Window.h  MainWindow.cpp  MainWindow.h
